--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -6,3 +6,4 @@ $color-gray-500: #6a737d;
 $color-text-help: #959da5;
 $color-white: #ffffff;
 $color-border-light: #e1e4e8;
+$color-border-dark: #d1d5da;
