--- a/src/Components/sidebar/index.scss
+++ b/src/Components/sidebar/index.scss
@@ -1,9 +1,38 @@
 @import "../../sass/base/variables";
-
+@import "../../sass/base/mixins";
 .sidebar__container {
   width: 248px;
   max-width: 248px;
   background-color: $color-white;
   border-radius: 4px;
   border: 1px solid $color-border-light;
+  padding: 16px 12px 0 16px;
+  &--header {
+    @include flexJustifyStart;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+  &--logo {
+    width: 16px;
+    height: 16px;
+  }
+  &--heading {
+    color: $color-secondary;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    padding-left: 8px;
+  }
+  &--input {
+    margin-bottom: 16px;
+    input {
+      height: 28px;
+      width: 100%;
+      padding: 6px 12px;
+      border-radius: 4px;
+      border: 1px solid $color-border-dark;
+      background: $color-white;
+    }
+  }
 }
