card and listcard components and styling v1

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,8 +1,10 @@
 $color-primary: #24292e;
+$color-primary-light: #5d6bce;
 $color-secondary: #444d56;
 $color-success: #8bc34a;
 $color-failure: #db4949;
 $color-gray-500: #6a737d;
+$color-gray-025: #fafbfc;
 $color-text-help: #959da5;
 $color-white: #ffffff;
 $color-border-light: #e1e4e8;
