--- a/src/Components/sidebar/index.scss
+++ b/src/Components/sidebar/index.scss
@@ -3,6 +3,8 @@
 .sidebar__container {
   width: 248px;
   max-width: 248px;
+  height: 100vh;
+  overflow-y: scroll;
   background-color: $color-white;
   border-radius: 4px;
   border: 1px solid $color-border-light;
