--- a/src/Components/card/index.scss
+++ b/src/Components/card/index.scss
@@ -15,7 +15,7 @@
     width: 60px !important;
     border-radius: 50%;
     margin-right: 12px;
-    background-color: yellowgreen;
+    background-color: rgb(41, 37, 31);
     @include flexJustifyAlignCenter;
     img {
       height: 24px;
@@ -36,18 +36,26 @@
       font-weight: 600;
       line-height: 24px; /* 133.333% */
       border-bottom: 1px solid $color-border-light;
-      // &-value {
-      //   margin-bottom: 6px;
-      // }
-      // &-text {
-      //   margin-bottom: 12px;
-      //   color: $color-gray-500;
-      // }
+      font-style: normal;
+      font-weight: 600;
+
+      span {
+        margin-right: 10px;
+      }
+      .price--change {
+        font-size: 18px;
+        line-height: 24px;
+      }
+      .percentage--change {
+        font-size: 14px;
+        line-height: 18px;
+      }
     }
     &--amount {
       display: flex;
       justify-content: space-between;
       margin-top: 12px;
+
       &-value {
         color: $color-primary;
       }
@@ -57,6 +65,7 @@
 
       &-buy {
         border-right: 1px solid $color-border-light;
+        width: 50%;
       }
       &-sell {
       }
