--- a/src/Components/mainContent/index.scss
+++ b/src/Components/mainContent/index.scss
@@ -22,7 +22,7 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
-    line-height: 28px; /* 175% */
+    line-height: 28px;
     padding-left: 8px;
   }
 }
